kyverno/base/policies/ingress/disallow-default-tsloptions.yaml
# https://kyverno.io/policies/traefik/disallow_default_tlsoptions/disallow_default_tlsoptions/
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-default-tlsoptions
  annotations:
    policies.kyverno.io/title: Disallow Default TLSOptions
    policies.kyverno.io/category: Traefik
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: TLSOption
    policies.kyverno.io/description: >-
      The TLSOption CustomResource sets cluster-wide TLS configuration options for Traefik when
      none are specified in a TLS router. Since this can take effect for all Ingress resources,
      creating the `default` TLSOption is a restricted operation. This policy ensures that
      only a cluster-admin can create the `default` TLSOption resource.
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: disallow-default-tlsoptions
    match:
      resources:
        names:
        - default
        kinds:
        - TLSOption
    exclude:
      clusterRoles:
      - cluster-admin
    validate:
      message: "Only cluster administrators are allowed to set default TLSOptions."
      deny: {}
