kyverno/base/policies/ingress/require-ingress-host.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-ingress-host
  annotations:
    policies.kyverno.io/title: Require Ingress Host
    policies.kyverno.io/category: Traefik
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      prevent ingresses from hijacking the default traefik route by requiring an
      explicit host value
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: require-ingress-host
    match:
      resources:
        kinds:
        - Ingress # Starting with capital letter seems to be significant for policy validation on admission
    validate:
      message: "Ingresses must specify a host"
      pattern:
        spec:
          rules:
          - host: "*?"
